<resources>
    <string name="app_name">CoolWallet</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_expense">Expense</string>
    <string name="str_income">Income</string>
    <string name="recent_items">Recent Items</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="label">Label</string>
    <string name="save">Save</string>
    <string name="calendar_date_picker_result_values">%1$s.%2$s.%3$s</string>
    <string name="radial_time_picker_result_value">%1$s:%2$s</string>
    <string name="empty_editText">You msut fill this area</string>
    <string name="no_items">No items in this period</string>
    <string name="dispersion">dispersion</string>
    <string name="settings">Settings</string>
    <string name="label_manager">Label manager</string>
    <string name="planed_expenses">Planed expenses</string>
    <string name="author">Author:  </string>
    <string name="authors_name">Bartha Bálint</string>
    <string name="options">Options</string>
    <string name="starting_amount">Starting amount:</string>
    <string name="animations">Animations:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="settings_saved">Settings saved succesfully!</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>
    <string name="removed">removed from list!</string>
    <string name="undo">UNDO</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="jule">Jule</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="item_saved">Item saved succesfully</string>
    <string name="al_items">All items</string>
    <string name="monthly">monthly</string>
    <string name="yearly">yearly</string>
    <string name="expense">expense</string>
    <string name="income">income</string>
    <string name="add_item">Add %s item</string>
    <string name="save_confirmation">There are unsaved changes! Do you want to save?</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="starting_date">Starting date:</string>
    <string name="new_repeating">New repeating item</string>
    <string name="create">Create</string>
    <string name="title_activity_random">random</string>
    <string name="repeating_items">Repeating items</string>
    <string name="notification_title">Item: %1$s</string>
    <string name="notification_item_saved">Repeating item saved</string>
    <string name="item_saved_notification">Item saved notification</string>
    <string name="dismiss">DISMISS</string>
    <string name="open">Open</string>
    <string name="repeating_item">Repeating item</string>
    <string name="morning">Morning (8:00)</string>
    <string name="south">South (12:00)</string>
    <string name="afternoon">Afternoon (16:00)</string>
    <string name="evening">Evening(20:00)</string>
    <string name="now">Now (For test)</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="time_monthly">Monthly</string>
    <string name="second">Second (For test)</string>
    <string name="set_item">Set Item</string>
    <string name="frequency">Frequency</string>
    <string name="no_item_set">No item</string>
    <string name="success_create">sikeresen létrehozva!</string>
    <string name="you_must_set_an_item">Muszáj itemet megadni</string>
</resources>
