<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="24dip"
    android:id="@+id/repeatingRelativeLayout"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/hint_label"
        android:text="@string/title"
        android:id="@+id/textView11"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </TextView>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/dialog_title" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/hint_label"
        android:text="@string/starting_date"
        android:id="@+id/textView8"
        android:layout_below="@+id/dialog_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/date_edit_text"
        android:layout_below="@+id/textView8"
        android:layout_alignLeft="@+id/textView8"
        android:layout_alignStart="@+id/textView8"
        android:focusable="false"
        android:text="1996.11.24"/>

    <Spinner
        android:id="@+id/interval_spinner"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_edit_text"
        android:layout_alignLeft="@+id/date_edit_text"
        android:layout_alignStart="@+id/date_edit_text"
        android:layout_marginTop="22dp"
        android:background="@color/bpWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/hint_label"
        android:text="@string/frequency"
        android:id="@+id/textView9"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/interval_spinner"
        android:layout_alignLeft="@+id/interval_spinner"
        android:layout_alignStart="@+id/interval_spinner" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/freq_edit_text"
        android:inputType="numberSigned"
        android:layout_below="@+id/textView9"
        android:layout_alignLeft="@+id/textView9"
        android:layout_alignStart="@+id/textView9" />

    <Spinner
        android:id="@+id/time_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="28dp"
        android:background="@color/bpWhite"
        android:layout_alignTop="@+id/date_edit_text"
        android:layout_toRightOf="@+id/date_edit_text"
        android:layout_toEndOf="@+id/date_edit_text" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_item"
        android:id="@+id/rep_save"
        android:background="@color/colorAccent"
        android:layout_below="@+id/freq_edit_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="16dp"
        android:layout_marginTop="11dp" />
    <TextView
        android:padding="16dp"
        android:id="@+id/tvItemSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_item_set"
        android:layout_alignBaseline="@+id/rep_save"
        android:layout_alignBottom="@+id/rep_save"
        android:layout_toRightOf="@+id/rep_save"
        android:layout_toEndOf="@+id/rep_save" />

</RelativeLayout>