<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lokter.hu.coolwallet.AddItemActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Expense item"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/textView_title_addItem"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_title_addItem"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_marginStart="16dp"></EditText>

    <EditText
        android:id="@+id/editTextAmount"
        android:layout_width="117dp"
        android:layout_height="44dp"
        android:hint="@string/amount"
        android:inputType="numberSigned"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:textSize="@dimen/hint_label"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount"
        android:id="@+id/textView5"
        android:layout_marginStart="16dp" />

    <AutoCompleteTextView
        android:layout_width="116dp"
        android:layout_height="42dp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextAmount"
        android:id="@+id/autoCompleteTextView"
        android:completionThreshold="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp">

    </AutoCompleteTextView>

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="145dp"
        android:layout_height="49dp"
        android:text="1912.11.24"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:layout_marginLeft="16dp"
        android:focusable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="@dimen/hint_label"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/textView6"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
        android:layout_marginStart="16dp"
        />
    <EditText
        android:id="@+id/editTextTime"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:inputType="none"
        android:text="18:00"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintLeft_toRightOf="@+id/editTextDate"
        android:focusable="false"
        android:layout_marginLeft="-11dp"
        android:layout_marginTop="-97dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="@dimen/hint_label"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="113dp"
        android:id="@+id/textView7"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
        android:layout_marginStart="113dp" />
    <Button
        android:id="@+id/saveButton"
        android:layout_width="351dp"
        android:layout_height="62dp"
        android:background="@color/colorAccent"
        android:text="@string/save"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextTime"
        android:layout_marginLeft="17dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="17dp"
        android:focusable="false"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp" />



</android.support.constraint.ConstraintLayout>
